--- a/src/makefile
+++ b/src/makefile
@@ -6,11 +6,16 @@ TARGET = $(BUILD_DIR)/lejeu
 # List libs
 LIBS += -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 
-# List sources
+# List sources and include directories
 SOURCES += main.cpp
 
-# List includes dirs
-# INCLUDES +=
+INCLUDE_PATHS += components
+
+SOURCES += entities/entities.cpp
+INCLUDE_PATHS += entities
+
+# Generate include options
+INCLUDES = $(addprefix -I, $(INCLUDE_PATHS))
 
 # Generate compiled file names
 OBJECTS = $(SOURCES:%.cpp=$(BUILD_DIR)/%.o)
@@ -22,10 +27,10 @@ COMPILE_FLAGS = -std=c++11 -Wall -Wextra -g
 all: thegame
 
 clean:
-		rm -r $(BUILD_DIR)
+	rm -r $(BUILD_DIR)
 
 thegame: prepare $(TARGET)
-		chmod +x $(TARGET)
+	chmod +x $(TARGET)
 
 prepare:
 	mkdir -p $(BUILD_DIR)
