wip: not compiling

--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,11 @@
 CXX = g++
+SRC_EXT = cpp
 
 BUILD_DIR = build
 TARGET = $(BUILD_DIR)/lejeu
 
 # List libs
-LIBS += -lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
+LIBS += #-lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 
 # List sources and include directories
 SOURCES += main.cpp
@@ -18,7 +19,8 @@ INCLUDE_PATHS += entities
 INCLUDES = $(addprefix -I, $(INCLUDE_PATHS))
 
 # Generate compiled file names
-OBJECTS = $(SOURCES:%.cpp=$(BUILD_DIR)/%.o)
+OBJECT_PATHS = $(notdir $(SOURCES))
+OBJECTS = $(OBJECT_PATHS:%.cpp=$(BUILD_DIR)/%.o)
 
 # Compile flags
 COMPILE_FLAGS = -std=c++11 -Wall -Wextra -g
@@ -39,6 +41,6 @@ $(TARGET): $(OBJECTS)
 	@echo "Linking: $@"
 	$(CXX) $(OBJECTS) -o $@ $(LIBS)
 
-$(BUILD_DIR)/%.o: $(SOURCES)
+$(BUILD_DIR)/%.o: %.$(SRC_EXT)
 	@echo "Compiling: $< -> $@"
 	$(CXX) $(COMPILE_FLAGS) $(INCLUDES) -c $< -o $@
