--- a/src/makefile
+++ b/src/makefile
@@ -2,25 +2,28 @@ CXX = g++
 SRC_EXT = cpp
 
 BUILD_DIR = build
+SOURCES_DIR = src
 TARGET = $(BUILD_DIR)/lejeu
 
 # List libs
 LIBS += #-lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 
 # List sources and include directories
-SOURCES += main.cpp
+SOURCES += $(SOURCES_DIR)/main.cpp
 
-INCLUDE_PATHS += components
+INCLUDE_PATHS += $(SOURCES_DIR)/components
 
-SOURCES += entities/entities.cpp
-INCLUDE_PATHS += entities
+SOURCES += $(SOURCES_DIR)/entities/entities.cpp
+INCLUDE_PATHS += $(SOURCES_DIR)/entities
 
 # Generate include options
 INCLUDES = $(addprefix -I, $(INCLUDE_PATHS))
 
 # Generate compiled file names
-OBJECT_PATHS = $(notdir $(SOURCES))
-OBJECTS = $(OBJECT_PATHS:%.cpp=$(BUILD_DIR)/%.o)
+OBJECTS = $(SOURCES:%.cpp=$(BUILD_DIR)/%.o)
+
+# Generate directory architecture
+OBJECT_PATHS = $(dir $(OBJECTS))
 
 # Compile flags
 COMPILE_FLAGS = -std=c++11 -Wall -Wextra -g
@@ -36,6 +39,7 @@ thegame: prepare $(TARGET)
 
 prepare:
 	mkdir -p $(BUILD_DIR)
+	mkdir -p $(OBJECT_PATHS)
 
 $(TARGET): $(OBJECTS)
 	@echo "Linking: $@"
