WIP refacto controls
Use SFML Input class instead of Events

--- a/project/src/engine/makefile
+++ b/project/src/engine/makefile
@@ -2,6 +2,7 @@
 INCLUDE_PATHS += $(ENGINE_DIR)/components
 
 SOURCES += $(ENGINE_DIR)/entities/entities.cpp
+SOURCES += $(ENGINE_DIR)/entities/player.cpp
 INCLUDE_PATHS += $(ENGINE_DIR)/entities
 
 SOURCES += $(ENGINE_DIR)/user_controls/user_controls.cpp
