[user_controls] Refacto controls
Use SFML Input class instead of Events

--- a/project/src/engine/makefile
+++ b/project/src/engine/makefile
@@ -1,11 +1,15 @@
 
+SOURCES += $(ENGINE_DIR)/mainloop.cpp
+INCLUDE_PATHS += $(ENGINE_DIR)
+
 INCLUDE_PATHS += $(ENGINE_DIR)/components
 
 SOURCES += $(ENGINE_DIR)/entities/entities.cpp
+SOURCES += $(ENGINE_DIR)/entities/player.cpp
 INCLUDE_PATHS += $(ENGINE_DIR)/entities
 
 SOURCES += $(ENGINE_DIR)/user_controls/user_controls.cpp
 INCLUDE_PATHS += $(ENGINE_DIR)/user_controls
 
 SOURCES += $(ENGINE_DIR)/renderer/renderer.cpp
-INCLUDE_PATHS += $(ENGINE_DIR)/renderer/
+INCLUDE_PATHS += $(ENGINE_DIR)/renderer
