--- a/project/src/engine/makefile
+++ b/project/src/engine/makefile
@@ -1,4 +1,7 @@
 
+SOURCES += $(ENGINE_DIR)/mainloop.cpp
+INCLUDE_PATHS += $(ENGINE_DIR)
+
 INCLUDE_PATHS += $(ENGINE_DIR)/components
 
 SOURCES += $(ENGINE_DIR)/entities/entities.cpp
@@ -9,4 +12,4 @@ SOURCES += $(ENGINE_DIR)/user_controls/user_controls.cpp
 INCLUDE_PATHS += $(ENGINE_DIR)/user_controls
 
 SOURCES += $(ENGINE_DIR)/renderer/renderer.cpp
-INCLUDE_PATHS += $(ENGINE_DIR)/renderer/
+INCLUDE_PATHS += $(ENGINE_DIR)/renderer
